--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
 	<!-- put the subimages here -->
 	<ul class="subImagesContainer"></ul>
 
+	<!-- adding a lightbox -->
+	<section class="lightbox">
+		<i class="fa fa-times close-lightbox"></i>
+		<div class="lightbox-style">
+				<img src="#" alt="large preview image" class="lightbox-img">
+				<p class="img-desc">placeholder copy</p>
+		</div>
+	</section>
+
+
 	<!-- add script files here -->
 	<script src="script/contentObject.js"></script>
 	<script src="script/main.js"></script>
