--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title>Changing Things with CSS and JS</title>
 <link href='http://fonts.googleapis.com/css?family=Mystery+Quest' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="css/seasons.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -26,6 +27,7 @@
 
 	<!-- adding a lightbox -->
 	<section class="lightbox">
+		<!--close lightbox -->
 		<i class="fa fa-times close-lightbox"></i>
 		<div class="lightbox-style">
 				<img src="#" alt="large preview image" class="lightbox-img">
